--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,142 @@
+body{
+  font-family: 'Encode Sans Semi Expanded', sans-serif;
+}
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 .App {
+  background-color: rgba(255, 255, 255, 0.473);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.containerColumn {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.containerRow{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.search {
+  padding: 12px 24px;
+  background-color: white;
+  font-size: 14px;
+  line-height: 18px;
+  color: #000000;
+  border: 3px solid #81B214;
+  border-radius: 5px;
+  margin: 3px;
+}
+.searchBtn{
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 3px solid #FFCC29;
+  margin: 3px;
+}
+.searchBtn:hover{
+  background-color: #FFCC29;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border-radius: 5px;
+  margin: 20px;
+  min-width: 350px;
+  padding: 20px;
+  border: 3px solid #FFCC29;
 }
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none; 
+  padding: 0;
+  text-shadow: 0 1px 0 rgba(255,255,255,.5);
+}
+li {
+margin: 5px;
+}
+li:hover{
+  background: #FFCC29;
+}
+
+
+.btnAdd{
+  background-color: #FFCC29;
+  border-radius: 5px;
+  border: 2px solid #FFCC29 ;
+  margin: 3px;
+  width: 40px;
+  height: 40px;
+}
+.btnAddClick{
+  background-color: white;
+  border-radius: 5px;
+  border: 2px solid #FFCC29;
+  margin: 3px;
+  width: 40px;
+  height: 40px;
+}
+.foodBtn{
+  border-radius: 5px;
+  background-color: #ffffff ;
+  border: 3px solid #F58634;
+  margin: 5px;
+}
+.foodBtn:hover{
+  background-color: #F58634;
+}
+.picture{
+  border-radius: 5px;
+}
+
+.showBlock{
+  display: block;
+}
+.showNone{
+  display: none;
+}
+
+h1{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: #81B214;
+}
+.h1Div{
+  margin: 7px;
+  border-radius: 5px;
+  border: 2px solid #FFCC29 ;
+  background-color: white;
+}
+h2{
+  color: #F58634;
+}
+span{
+  color: #F58634;
+}
+.span2{
+  margin-left: 3px;
+  margin-right: 3px;
+  color: #FFCC29;
+}
+
+
+
